fix(redis): final sweep — catch finals, ArrayList elimination, stale Javadoc
- RoleResolver, TestcontainerController, FailoverHelper:
  catch (Exception e) → catch (final Exception e) — consistent with codebase style

- DefaultSentinelClusterFactory:
  allContainers() — ArrayList+addAll → Stream.concat().toList() (no mutable intermediate)
  Arrays.asList(packages) → List.of(packages) (truly immutable)
  Arrays + ArrayList imports removed, Stream added

- SentinelCommandBuilder:
  @throws RuntimeException → @throws ClusterCreationException (matches actual thrown type)